--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Personal Introduce</title>
 
+	<!-- Basic -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- Import css files -->
+	<link rel="stylesheet" type="text/css" href="../fonts.css">
+	<link rel="stylesheet" type="text/css" href="../widgets.css">
+
+	<!-- Import javascript file -->
+	<script type="text/javascript" src="../main.js" defer></script>
+	<script type="text/javascript" src="../function.js" defer></script>
+</head>
+
+<body>
+	<div class="Article">
+		<h2>Introduce</h2>
+		<div id="section">
+			<img src="../imgs/Img_Icon.png" width="50"><br>
+			<p>Hello, there.<br>
+			Welcome to my website.</p>
+
+			<p>NM(sometimes HD), alternating player.<br>
+			Keyboard + mouse(next).<br>
+			Mouse sens(On linux, without raw, 1920*1080): <b>0.6x</b>-0.7x<br>
+			I play 4-5* maps.</p>
+
+			<p>I am <b>not</b> a cheater(also cheat in osu! is boring).<br>
+			You may see I suddenly missed lots of notes during multi-games.<br>
+			Cuz I am resting my hands.</p>
+			
+			<p>Skin: #mikuAutumn <b>16:9</b><br>
+			<b>Modified</b> by me.<br>
+			<b>Origin author: kelinimo (NOT ME)</b>.<br>
+			Mediafire: <a href="https://mediafire.com/file/xyh525gd3oqplsg/%2523mikuAutumn.osk/file"
+						target="_blank">Download</a></p>
+			
+			<p>This skin is a fork of it(the original one).<br>
+			You may ask, the hell what is the difference?<br>
+			I change the details.<br>
+			Like resolution, denoise and etc.</p>
+
+			<p>If you have any ideas about this website, you can msg me in osu.</p>
+		</div>
+
+		<h2>Blog</h2>
+		<div id="section">
+			<p>2023.10.6<br>
+			Mouse is so tired to play.<br>
+			It requires higher movement?<br>
+			2023.10.8<br>
+			My bad, I didn't change mouse sens to a proper value.</p>
+
+			<p>2023.10.1<br>
+			I'm idle so I modified my fav skin.<br>
+			And it took about <s>4 hours</s> for me to do that.<br>
+			Night (23:15 in China)<br>
+			Now it took me about the whole afternoon to adjust the details. xd.</p>
+
+			<p>2023.09.24<br>
+			<img src="../imgs/Img_1.png" width="300"><br>
+			Seriously? xD<br>
+			I was actually surprised.<br>
+			Cuz I haven't met any <b>foreigns</b> say Chinese(except memes).</p>
+
+			<p>2023.09.18<br>
+			I don't know why I <b>always</b> kicked by some hosts.<br>
+			But I think they are very rude <b>without</b> waiting me</p>
+		</div>
+	</div>
+
+	<div class="Bottom-to-top">
+		<a id="bottom-to-top">To top.</a>
+	</div>
+</body>
+</html>
