--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -20,7 +20,7 @@
 	<div class="Article">
 		<h2>Introduce</h2>
 		<div id="section">
-			<img src="../imgs/Img_Icon.png" width="50"><br>
+			<img src="../imgs/Img_Icon.png" width="50" alt="cutt37"><br>
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 
@@ -62,7 +62,7 @@
 			Now it took me about the whole afternoon to adjust the details. xd.</p>
 
 			<p>2023.09.24<br>
-			<img src="../imgs/Img_1.png" width="300"><br>
+			<img src="../imgs/Img_1.png" width="300" alt="Chat between Keta and cutt37"><br>
 			Seriously? xD<br>
 			I was actually surprised.<br>
 			Cuz I haven't met any <b>foreigns</b> say Chinese(except memes).</p>
