--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -25,8 +25,8 @@
 			Welcome to my website.</p>
 
 			<p>NM(sometimes HD), alternating player.<br>
-			Keyboard + mouse(next).<br>
-			Mouse sens(On linux, without raw, 1920*1080): <b>0.6x</b>-0.7x<br>
+			Keyboard and mouse.<br>
+			Mouse sens(On linux, <u title="Reduce drift">raw</u>, 1920*1080): 0.5x-<b>0.6x</b><br>
 			I play 4-5* maps.</p>
 
 			<p>I am <b>not</b> a cheater(also cheat in osu! is boring).<br>
