--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<!-- Import javascript files -->
 	<script type="text/javascript" src="main.js" defer></script>
 	<script type="text/javascript" src="function.js" defer></script>
+
+	<!-- Import analytics -->
+	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
 <body>
