--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -14,6 +14,9 @@
 	<!-- Import javascript file -->
 	<script type="text/javascript" src="../main.js" defer></script>
 	<script type="text/javascript" src="../function.js" defer></script>
+
+	<!-- Analytics -->
+	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
 <body>
