--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="main.js" defer></script>
 	<script type="text/javascript" src="function.js" defer></script>
 
-	<!-- Import analytics -->
+	<!-- Analytics -->
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
