--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -29,7 +29,7 @@
 
 			<p>NM(sometimes HD), alternating player.<br>
 			Keyboard and mouse.<br>
-			Mouse sens(On linux, <u title="Reduce drift">raw</u>, 1920*1080): 0.5x-<b>0.6x</b><br>
+			Mouse sens(On linux, <u title="Reduce drift">raw</u>, 1920*1080): <b>0.45x</b>-0.5<br>
 			I play 4-5* maps.</p>
 
 			<p>I am <b>not</b> a cheater(also cheat in osu! is boring).<br>
@@ -47,32 +47,6 @@
 			I change the details.<br>
 			Like resolution, denoise and etc.</p>
 
-			<p>If you have any ideas about this website, you can msg me in osu.</p>
-		</div>
-
-		<h2>Blog</h2>
-		<div id="section">
-			<p>2023.10.6<br>
-			Mouse is so tired to play.<br>
-			It requires higher movement?<br>
-			2023.10.8<br>
-			My bad, I didn't change mouse sens to a proper value.</p>
-
-			<p>2023.10.1<br>
-			I'm idle so I modified my fav skin.<br>
-			And it took about <s>4 hours</s> for me to do that.<br>
-			Night (23:15 in China)<br>
-			Now it took me about the whole afternoon to adjust the details. xd.</p>
-
-			<p>2023.09.24<br>
-			<img src="../imgs/Img_1.png" width="300" alt="Chat between Keta and cutt37"><br>
-			Seriously? xD<br>
-			I was actually surprised.<br>
-			Cuz I haven't met any <b>foreigns</b> say Chinese(except memes).</p>
-
-			<p>2023.09.18<br>
-			I don't know why I <b>always</b> kicked by some hosts.<br>
-			But I think they are very rude <b>without</b> waiting me</p>
 		</div>
 	</div>
 
