--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -26,32 +26,29 @@
 			<img src="../imgs/Img_Icon.png" width="50" alt="cutt37"><br>
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
-
-			<p>NM(sometimes HD), alternating player.<br>
+			
+			<p>Play style: alternating<br>
 			Keyboard and mouse.<br>
-			Mouse sens(On linux, <u title="Reduce drift">raw</u>, 1920*1080): <b>0.45x</b>-0.5<br>
+			Mouse sensitivity: <b>0.4x</b>-0.45<br>
+			Raw or no raw have less affect to your mouse.<br>
 			I play 4-5* maps.</p>
 
-			<p>I am <b>not</b> a cheater(also cheat in osu! is boring).<br>
+			<p>First I want to say I am <b>not</b> a cheater.<br>
 			You may see I suddenly missed lots of notes during multi-games.<br>
 			Cuz I am resting my hands.</p>
 			
-			<p>Skin: #mikuAutumn <b>16:9</b><br>
-			<b>Modified</b> by me.<br>
-			<b>Origin author: kelinimo (NOT ME)</b>.<br>
+			<p>My skin: #mikuAutumn <b>16:9</b><br>
+			<u title="I changed the resolution of every images, denoise and sharpen them.">Modified</u> by me.<br>
+			<b>Origin author: kelinimo</b>.<br>
 			Mediafire: <a href="https://mediafire.com/file/kpc873dc86jl4j0/%2523mikuAutumn.osk/file"
 						  target="_blank">Download</a></p>
-			
-			<p>This skin is a fork of it(the original one).<br>
-			You may ask, the hell what is the difference?<br>
-			I change the details.<br>
-			Like resolution, denoise and etc.</p>
-
 		</div>
 	</div>
 
+	<!--
 	<div class="Bottom-to-top">
 		<a id="bottom-to-top">To top.</a>
 	</div>
+	-->
 </body>
 </html>
