--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 	</div>
 	
 	<div class="Article">
-		<h1>Archlinux下载</h1>
+		<h1>Archlinux的下载</h1>
+		<h2>我为什么选择Archlinux</h2>
+		<div id="section">
+			<p>wiki全<br>
+			对硬件支持全(至少我试了大部分linux都不支持我的这个网卡)<br>
+			我不喜欢Windows 11(甚至是整个 Windows)的无用特性<br>
+			安装可自定义</p>
+		</div>
 		
 		<h2>1.联网</h2>
 		<div id="section">
@@ -199,7 +206,7 @@
 			<h3>tty字体(可选)</h3>
 			echo FONT=ter-132n(n-正常 b-粗体) &gt; /etc/vconsole.conf<br><br>
 			
-			<h3>高分辨率支持(1920x1080及以上)(可选):</h3>
+			<h3>高分辨率(1920x1080及以上):</h3>
 			echo GDK_DPI_SCALE=1.25 &gt;&gt; /etc/environment<br>
 			echo GDK_SCALE=1.25 &gt;&gt; /etc/environment<br><br>
 
