--- a/pages/explain.html
+++ b/pages/explain.html
@@ -37,7 +37,7 @@
 			<i>斜体字--根据情况</i><br>
 		</div>
 
-		<h2 id="reference">引用</h2>
+		<h2 id="reference">应用的Wiki</h2>
 		<div id="section">
 			<a href="https://wiki.archlinux.org/title/Microcode#Loading_microcode">CPU微码固件(AMD/Intel)</a><br>
 			<a href="https://wiki.archlinux.org/title/Category:Graphics">显卡驱动</a><br>
