--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</span>
 			wget git vi vim<br>
 			wqy-microhei-lite terminus-font bluez bluez-utils<br>
-			alsa-plugins zip {un,p7}zip tlp acpi{d,light}<br><br>
+			alsa-{utils,plugins} zip {un,p7}zip tlp acpi{d,light}<br><br>
 			
 			<h3>CPU微码&显卡</h3>
 			Amd nvidia<a href="./pages/explain#reference">点此</a>查找.(见CPU微码,显卡驱动)<br>
