--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	
 	<div class="Article">
 		<h1>Archlinux的下载</h1>
-		<h2>我为什么选择Archlinux</h2>
+		<h2>Why archlinux</h2>
 		<div id="section">
 			<p>wiki全<br>
 			对硬件支持全(至少我试了大部分linux都不支持我的这个网卡)<br>
-			我不喜欢Windows 11(甚至是整个 Windows)的无用特性<br>
+			我不喜欢Windows (11/10/8.1/7)<br>
 			安装可自定义</p>
 		</div>
 		
@@ -222,8 +222,6 @@
 		</div>
 	</div>
 	
-	<div class="Bottom-to-top">
-		<a id="bottom-to-top">To top.</a>
-	</div>
+	<div id="Footer"></div>
 </body>
 </html>
