--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -13,7 +13,6 @@
 
 	<!-- Import javascript file -->
 	<script type="text/javascript" src="../main.js" defer></script>
-	<script type="text/javascript" src="../function.js" defer></script>
 
 	<!-- Analytics -->
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
@@ -41,10 +40,6 @@
 		</div>
 	</div>
 
-	<!--
-	<div class="Bottom-to-top">
-		<a id="bottom-to-top">To top.</a>
-	</div>
-	-->
+	<div id="Footer"></div>
 </body>
 </html>
