--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -26,13 +26,12 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Play style: alternating<br>
+			<p>Play style: alternating.<br>
 			Keyboard and mouse.<br>
-			Mouse sensitivity: <b>0.4x</b>-0.45<br>
-			Raw or no raw have less affect to your mouse.<br>
+			Mouse config: 0.4x, no raw.<br>
 			I play 4-5* maps.</p>
 			
-			<p>My skin: #mikuAutumn <b>16:9</b><br>
+			<p>Skin: #mikuAutumn <b>16:9</b><br>
 			<u title="I changed the resolution of every images, denoise and sharpen them.">Modified</u> by me.<br>
 			<b>Origin author: kelinimo</b>.<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
