--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -28,12 +28,10 @@
 			
 			<p>Play style: alternating.<br>
 			Keyboard and mouse.<br>
-			Mouse config: 0.4x, no raw.<br>
+			Mouse config: 0.4x-0.41x, no raw.<br>
 			I play 4.5-5.1* maps.</p>
 			
-			<p>Skin: #mikuAutumn <b>16:9</b><br>
-			<u title="I changed the resolution of every images, denoise and sharpen them.">Modified</u> by me.<br>
-			<b>Origin author: kelinimo</b>.<br>
+			<p>Skin: #mikuAutumn <b>16:9</b> modified<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
 						  target="_blank">Download</a></p>
 		</div>
