--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -28,12 +28,19 @@
 			
 			<p>Play style: alternating.<br>
 			Keyboard and mouse.<br>
-			Mouse config: 0.4x-0.41x, no raw.<br>
-			I play 4.5-5.1* maps.</p>
-			
-			<p>Skin: #mikuAutumn <b>16:9</b> modified<br>
+			Mouse config: 0.4x, no raw.<br>
+			I play 4-5.1* maps.</p>
+
+			<p>2023-12-30 updated<br>
+			Skin: #mikuAutumn <b>16:9</b> modified<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
-						  target="_blank">Download</a></p>
+						  target="_self">Download</a></p>
+		</div>
+
+		<h2>Others</h2>
+		<div id="section">
+			<p>My stupid script<br>
+			Image Processor: <a href="../pkgs/main.py">Download</a></p>
 		</div>
 	</div>
 
