--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -31,7 +31,7 @@
 			Mouse config: 0.4x, no raw.<br>
 			I play 4-5.1* maps.</p>
 
-			<p>2023-12-30 updated<br>
+			<p>2024-01-07 updated<br>
 			Skin: #mikuAutumn <b>16:9</b> modified<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
 						  target="_self">Download</a></p>
@@ -40,7 +40,11 @@
 		<h2>Others</h2>
 		<div id="section">
 			<p>My stupid script<br>
-			Image Processor: <a href="../pkgs/main.py">Download</a></p>
+			Image Processor: <a href="../pkgs/proj.zip">Download</a></p>
+			<p>#mikuAutumn 'extra' things<br>
+			I changed the extra folder.<br>
+			Extra: <a href="../pkgs/extra.zip">Download</a>
+			</p>
 		</div>
 	</div>
 
