--- a/pages/config.html
+++ b/pages/config.html
@@ -37,10 +37,10 @@
 			联网用nmtui<br><br>
 			
 			<h3>软件下载</h3>
-			sudo pacman -S <i>i3{-wm,lock,status}(<a href="../e#reference">其他桌面环境</a>)</i><br>
-			network-manager-applet pcmanfm-gtk3 xarchiver dmenu<br>
-			dunst feh ibus ibus-libpinyin picom flameshot mpv<br>
-			zsh zsh-{completions,autosuggestions,syntax-highlighting}<br>
+			sudo pacman -S <i>i3{-wm,lock,status}(<a href="../e#reference">其他桌面环境</a>)</i> \<br>
+			network-manager-applet pcmanfm-gtk3 xarchiver dmenu \<br>
+			dunst feh ibus ibus-libpinyin picom flameshot mpv \<br>
+			zsh zsh-{completions,autosuggestions,syntax-highlighting} \<br>
 			chromium alacritty xss-lock<br>
 			下载yay:<br>
 			wget https://cutt37.github.io/pkgs/yay-12.1.0-1-x86_64.pkg.tar.zst<br><br>
@@ -80,7 +80,7 @@
 			<span id="require">sudo systemctl enable slim</span><br>
 			
 			<p>sudo vim /etc/slim.conf<br>
-			/current_theme to search.<br>
+			type <u>/current_theme</u> to search.<br>
 			current_theme <i>archlinux-simplyblack</i></p>
 
 			echo i3 &gt; .xinitrc<br><br>
