--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -28,7 +28,7 @@
 			
 			<p>Play style: alternating.<br>
 			Keyboard and mouse.<br>
-			Mouse config: 0.4x, no raw.<br>
+			Mouse config: 0.4x (0.7x in lazer), no raw.<br>
 			I play 4-5.1* maps.</p>
 
 			<p>2024-01-07 updated<br>
