--- a/pages/others.html
+++ b/pages/others.html
@@ -15,7 +15,7 @@
 	<div id="Menu">
 		<a href="../" id="available">Home</a>
 		<a href="./config" id="available">Config</a>
-		<a href="./" id="current">Games</a>
+		<a href="./" id="current">Others</a>
 	</div>
 
 	<div id="Article">
