--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -3,18 +3,13 @@
 <head>
 	<title>Personal Introduce</title>
 
-	<!-- Basic -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<!-- Import css files -->
+	<link rel="stylesheet" type="text/css" href="../main.css">
 	<link rel="stylesheet" type="text/css" href="../fonts.css">
-	<link rel="stylesheet" type="text/css" href="../widgets.css">
-
-	<!-- Import javascript file -->
-	<script type="text/javascript" src="../main.js" defer></script>
-
-	<!-- Analytics -->
+	<link rel="stylesheet" type="text/css" href="../colors.css">
+	
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
