--- a/pages/config.html
+++ b/pages/config.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="../main.css">
 	<link rel="stylesheet" type="text/css" href="../fonts.css">
 	<link rel="stylesheet" type="text/css" href="../colors.css">
+
+	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
 <body>
