--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			</div>
 
 			<p>tty font:<br>
-			echo FONT=ter-132n(n-正常 b-粗体) &gt; /etc/vconsole.conf</p>
+			echo FONT=ter-132n(n-normal b-bold) &gt; /etc/vconsole.conf</p>
 
 			<p>High resolution with small window problem:<br>
 			echo GDK_DPI_SCALE=1.25 &gt;&gt; /etc/environment<br>
