--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-	<div class="Article">
+	<div id="Article">
 		<h2>Introduce</h2>
-		<div id="section">
+		<div class="container">
 			<img src="../imgs/Img_Icon.png" width="50" alt="cutt37"><br>
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
@@ -33,16 +33,15 @@
 		</div>
 
 		<h2>Others</h2>
-		<div id="section">
+		<div class="container">
 			<p>My stupid script<br>
 			Image Processor: <a href="../pkgs/proj.zip">Download</a></p>
+			
 			<p>#mikuAutumn 'extra' things<br>
 			I changed the extra folder.<br>
 			Extra: <a href="../pkgs/extra.zip">Download</a>
 			</p>
 		</div>
 	</div>
-
-	<div id="Footer"></div>
 </body>
 </html>
