--- a/pages/others.html
+++ b/pages/others.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="../fonts.css">
 	<link rel="stylesheet" type="text/css" href="../colors.css">
 
+	<script type="text/javascript" src="../main.js" defer></script>	
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>	
 </head>
 
