--- a/index.html
+++ b/index.html
@@ -107,16 +107,17 @@
 			<div class="subcontainer">
 				<p>Graphic card driver and microcode:<br>
 				Graphic card driver:<br>
-				intel: modesetting(Ignore it, you dont have to download)<br>
+				intel: [modesetting(Ignore this),<br>
+				<u>vulkan-intel</u>,<u>intel-media-driver</u>(&gt;=gen9)]<br>
 				amd: <u>xf86-video-amd</u> <u>xf86-video-radeon</u></p>
 
 				<p>Microcode:<br>
 				intel cpu: <u>intel-ucode</u>;<br>
 				amd cpu: <u>amd-ucode</u>;</p>
-			</div>
 
-			<p>pacstrap /mnt intel-ucode intel-media-driver vulkan-intel \<br>
-			xf86-video-fbdev linux-firmware-qlogic</p>
+				<p>pacstrap /mnt intel-ucode intel-media-driver vulkan-intel \<br>
+				xf86-video-fbdev linux-firmware-qlogic</p>
+			</div>
 
 			<p>genfstab -U /mnt &gt;&gt; /mnt/etc/fstab<br>
 			arch-chroot /mnt</p>
@@ -124,7 +125,7 @@
 
 		<h2>4.Time and language</h2>
 		<div class="container">
-			<p><u>ls -sf /usr/share/zoneinfo</u> to check places.<br>
+			<p><u>ls /usr/share/zoneinfo</u> to check places.<br>
 			ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime<br>
 			hwclock --systohc</p>
 
@@ -134,7 +135,7 @@
 
 			<p>locale-gen<br>
 			echo LANG=en_US.UTF-8 &gt; /etc/locale.conf<br>
-			echo <i>{hostname}</i> &gt; /etc/hostname</p>
+			echo <u>your-hostname</u> &gt; /etc/hostname</p>
 		</div>
 
 		<h2>5.GRUB config</h2>
@@ -187,12 +188,13 @@
 			<p>tty font:<br>
 			echo FONT=ter-132n(n-normal b-bold) &gt; /etc/vconsole.conf</p>
 
-			<p>High resolution with small window problem:<br>
+			<p>High resolution with small window problem(Bigger resolution, bigger scale value):<br>
 			echo GDK_DPI_SCALE=1.25 &gt;&gt; /etc/environment<br>
 			echo GDK_SCALE=1.25 &gt;&gt; /etc/environment</p>
 
-			<p>If you are troubled with the intel graphic card,<br>
+			<p>If you are troubled with the intel or some graphic card,<br>
 			then add <u>MESA_LOADER_DRIVER_OVERRIDE</u>.<br>
+			Notice your fps may be less than before.<br>
 			echo MESA_LOADER_DRIVER_OVERRIDE=zink &gt;&gt; /etc/environment</p>
 
 			<p>mkinitcpio -P<br>
