--- a/pages/others.html
+++ b/pages/others.html
@@ -29,7 +29,10 @@
 
 			<p>sudo pacman -Syu<br>
 			sudo pacman -S wine-staging wine-mono winetricks \<br>
-			lib32-{libxcomposite,gst-plugins-base-libs,gnutls,<i>vulkan-intel</i>,libva}</p>
+			lib32-{libxcomposite,gnutls,vulkan-intel,\<br>
+			libpulse,alsa-lib,alsa-plugins,gst-plugins-base-libs,gtk3}</p>
+			
+			<p>yay -S ttf-tahoma</p>
 
 			<p>WINEARCH=win32 winecfg<br>
 			Select "Windows 2000"</p>
