--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -27,6 +27,13 @@
 			Mouse config: 0.4x (0.7x in lazer), no raw.<br>
 			I play 4-5.1* maps.</p>
 
+			<p>2024-01-21<br>
+			My fav. skin: #inabakumori <b>16:9</b><br>
+			Mediafire: <a href="https://mediafire.com/file/kgq6cp0vkyu9xhq/#inabakumori.osk/file"
+						  target="_self">Download</a><br>
+			Github: <a href="./pkgs/#inabakumori.osk">Download</a>
+			</p>
+
 			<p>2024-01-07 updated<br>
 			Skin: #mikuAutumn <b>16:9</b> modified<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
