--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -30,9 +30,13 @@
 			<p>Disclaim<br>
 			I dont create skin so they're modified.</p>
 
+			<p>2024-01-23 updated<br>
+			Skin: #inabakumori <b>16:9</b><br>
+			Mediafire: <a href="https://mediafire.com/file/kgq6cp0vkyu9xhq/#inabakumori.osk/file">Download</a><br>
+			Github: <a href="./pkgs/#inabakumori.osk">Download</a></p>
+
 			<p>2024-01-07 updated<br>
 			Skin: #mikuAutumn <b>16:9</b><br>
-			This is my favourite skin, still.<br>
 			Mediafire: <a href="https://mediafire.com/file/21g5w005s0u0ujp/%2523mikuAutumn.osk/file"
 						  target="_self">Download</a></p>
 		</div>
