--- a/pages/osu-personal-introduce.html
+++ b/pages/osu-personal-introduce.html
@@ -24,8 +24,12 @@
 			
 			<p>Play style: alternating.<br>
 			Keyboard and mouse.<br>
-			Mouse config: 0.4x (0.7x in lazer), no raw.<br>
-			I play 4-5.1* maps.</p>
+			Mouse config:<br>
+			1x, no raw.<br>
+			It's not a good idea to change dpi in osu,<br>
+			it'll cause the mouse drift.<br>
+			Because I'm using linux so mainly config in libinput.<br>
+			<u>"AccelSpeed" "-0.9"</u></p>
 
 			<p>Disclaim<br>
 			I dont create skin so they're modified.</p>
